refactor: 카드 뭉치 자료구조를 Deque 로 변경하여 사용에 용의하도록 수정